Github pages site branch autogenerated by hexo docs build

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="A series of miscellaneous functional JavaScript utility library.">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/invincible/css/style.css">
 </head>
 <body>
   <div class="root">
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <a href="/" class="logo">Invincible</a>
+        <a href="/invincible/" class="logo">Invincible</a>
       </div>
       <div class="col-md-8">
         <a href="javascript:void(0)" class="menu">
@@ -24,13 +24,13 @@
         <input id ="checkbox" type="checkbox" class="checkbox"/>
         <ul class="item-group clearfix">
           <li class="item">
-            <a class="link" href="/">Home</a>
+            <a class="link" href="/invincible/">Home</a>
           </li>
           <li class="item">
-            <a class="link" href="/api">API</a>
+            <a class="link" href="/invincible/api">API</a>
           </li>
           <li class="item">
-            <a class="link" href="/CHANGELOG.html">Change Log</a>
+            <a class="link" href="/invincible/CHANGELOG.html">Change Log</a>
           </li>
           <li class="item github">
             <iframe src="https://ghbtns.com/github-btn.html?user=chikara-chan&repo=invincible&type=star&count=true" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
@@ -47,7 +47,7 @@
   <h2 class="h2">Miscellaneous &amp; Functional JavaScript Utility Library</h2>
   <h2 class="h2">Fast & Simple & Powerful</h2>
   <div class="btn-group">
-    <a href="/api" class="btn btn-primary">开始使用</a>
+    <a href="/invincible/api" class="btn btn-primary">开始使用</a>
     <a href="https://github.com/chikara-chan/invincible" class="btn">GitHub</a>
   </div>
 </div>
@@ -61,7 +61,7 @@
       <div class="col-md-6 col-right">
         Released under the MIT license
         <a href="https://github.com/chikara-chan/invincible">
-          <img class="img" src="/img/GitHub-Mark-32px.png"/>
+          <img class="img" src="/invincible/img/GitHub-Mark-32px.png"/>
         </a>
       </div>
     </div>
@@ -70,22 +70,6 @@
 
 
   </div>
-  <script src="/js/script.js"></script>
-  <script>
-    var links, i,
-  rHost = /github\.io/,
-  map = Array.prototype.map
-
-if (location.hostname.match(rHost)) {
-  links = document.querySelectorAll('a')
-
-  for (i in links) {
-    if (links[i].href) {
-      links[i].href = links[i].href.replace(rHost, '$&/invincible')
-    }
-  }
-}
-
-  </script>
+  <script src="/invincible/js/script.js"></script>
 </body>
 </html>
