Github pages site branch autogenerated by hexo docs build

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </header>
 
 
-    <main class="main"><div class="container section-main">
+    <main class="main">
+      <div class="container section-main">
   <h1 class="h1">Invincible</h1>
   <h2 class="h2">Miscellaneous &amp; Functional JavaScript Utility Library</h2>
   <h2 class="h2">Fast & Simple & Powerful</h2>
@@ -51,7 +52,9 @@
     <a href="https://github.com/chikara-chan/invincible" class="btn">GitHub</a>
   </div>
 </div>
-</main>
+
+      <canvas width="0" height="0"></canvas>
+    </main>
     <div class="footer">
   <div class="container">
     <div class="row">
@@ -71,5 +74,6 @@
 
   </div>
   <script src="/js/script.js"></script>
+  <script src="/js/canvas.js"></script>
 </body>
 </html>
