Github pages site branch autogenerated by hexo docs build

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container section-main">
   <h1 class="h1">Invincible</h1>
   <h2 class="h2">Miscellaneous &amp; Functional JavaScript Utility Library</h2>
-  <h2 class="h2">Fast & Simple & Powerful</h2>
+  <h2 class="h2">Simple & Minimal & Powerful</h2>
   <div class="btn-group">
     <a href="/api" class="btn btn-primary">开始使用</a>
     <a href="https://github.com/chikara-chan/invincible" class="btn">GitHub</a>
@@ -59,7 +59,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        Copyright &copy; 2017 Chikara Chan
+        Copyright &copy; 2017 playplane.com
       </div>
       <div class="col-md-6 col-right">
         Released under the MIT license
